--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 
-
+<p>dfdsfsf</p>
 
 
 
@@ -59,15 +59,6 @@ todos = [
  {value: 'dsfasd5', completed: false},
  {value: 'dsfasd5', completed: true},
 ]
-
-
-
-
-
-	
-
-
-
 
 
 
