--- a/index.html
+++ b/index.html
@@ -6,34 +6,14 @@
 	<link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-
-
-<ul id="todo"></ul>
-
-
-
-
-
-<p>dfdsfsf</p>
-
-
-
-
-
-
+<ul id="parent"></ul>
 
 <input type="text" id="fix">
-
-
 
 <p id="paragraf"></p>
 
 <input id="rem" type="button" value="удалить">
 
-
-
-
-
-<script src= "ollo.js"></script>
+<script src= "script.js"></script>
 </body>
 </html>
