--- a/index.html
+++ b/index.html
@@ -7,13 +7,30 @@
 </head>
 <body>
 <ul id="parent"></ul>
-
+</br>
 <input type="text" id="fix">
-
+</br>
 <p id="paragraf"></p>
-
+</br>
 <input id="rem" type="button" value="удалить">
-
+</br>
+</br>
+<table id="user">
+   <tr>
+    <td>имя</td>
+    <td>фамилия</td>
+  </tr>
+   <tr>
+    <td>user2</td>
+    <td>user2</td>
+  </tr>
+   <tr>
+    <td>user2</td>
+    <td>user2</td>
+  </tr>
+</table>
+</br>
+<input type="button" id="createLi" value="добавить">
 <script src= "script.js"></script>
 </body>
 </html>
