--- a/index.html
+++ b/index.html
@@ -8,29 +8,25 @@
 <body>
 <ul id="parent"></ul>
 </br>
-<input type="text" id="fix">
+<input type="text" id="input">
 </br>
 <p id="paragraf"></p>
 </br>
-<input id="rem" type="button" value="удалить">
 </br>
 </br>
 <table id="user">
    <tr>
-    <td>имя</td>
-    <td>фамилия</td>
-  </tr>
-   <tr>
-    <td>user2</td>
-    <td>user2</td>
-  </tr>
-   <tr>
-    <td>user2</td>
-    <td>user2</td>
+    <td>...</td>
+    <td>...</td>
   </tr>
 </table>
 </br>
-<input type="button" id="createLi" value="добавить">
+<input type="text" id="name" placeholder="имя">
+<input type="text" id="secondName" placeholder="фамилия">
+</br>
+</br>
+</br>
+<input type="button" id="add" value="добавить">
 <script src= "script.js"></script>
 </body>
 </html>
