--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </br>
 <input type="text" id="input">
 </br>
-<p id="paragraf"></p>
+</br>
+</br>
+<input type="button" id="active" value="active">
+<input type="button" id="complited" value="complited">
 </br>
 </br>
 </br>
