--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
 </br>
 </br>
 </br>
+<input type="button" id="all" value="all">
 <input type="button" id="active" value="active">
 <input type="button" id="complited" value="complited">
 </br>
 </br>
 </br>
 <table id="user">
-   <tr>
-    <td>...</td>
-    <td>...</td>
-  </tr>
+   
 </table>
 </br>
 <input type="text" id="name" placeholder="имя">
@@ -30,6 +28,35 @@
 </br>
 </br>
 <input type="button" id="add" value="добавить">
+</br>
+</br>
+</br>
+</br>
+
+<form id="form">
+	<input value="1">
+	<input value="2">
+	<input value="4">
+	<input value="6">
+	<input value="8">
+	<input value="10">
+</form>
+<form id="form">
+	<input value="1">
+	<input value="2">
+	<input value="4">
+	<input value="6">
+	<input value="8">
+	<input value="10">
+</form>
+<form id="form">
+	<input value="1">
+	<input value="2">
+	<input value="4">
+	<input value="6">
+	<input value="8">
+	<input value="10">
+</form>
 <script src= "script.js"></script>
 </body>
 </html>
