--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
 	<input value="8">
 	<input value="10">
 </form>
+<form id="form">
+	<input value="1">
+	<input value="2">
+	<input value="4">
+	<input value="6">
+	<input value="8">
+	<input value="10">
+</form>
 <script src= "script.js"></script>
 </body>
 </html>
