--- a/index.html
+++ b/index.html
@@ -22,49 +22,12 @@
    
 </table>
 </br>
-<input type="text" id="name" placeholder="имя">
-<input type="text" id="secondName" placeholder="фамилия">
-</br>
-</br>
-</br>
-<input type="button" id="add" value="добавить">
-</br>
-</br>
-</br>
-</br>
+<input type="text" class="num">
+<input type="text" class="num">
+<input type="text" class="num"">
+<input type="button" id="suma" value="Сума">
+<p id="rezult"></p>
 
-<form id="form">
-	<input value="1">
-	<input value="2">
-	<input value="4">
-	<input value="6">
-	<input value="8">
-	<input value="10">
-</form>
-<form id="form">
-	<input value="1">
-	<input value="2">
-	<input value="4">
-	<input value="6">
-	<input value="8">
-	<input value="10">
-</form>
-<form id="form">
-	<input value="1">
-	<input value="2">
-	<input value="4">
-	<input value="6">
-	<input value="8">
-	<input value="10">
-</form>
-<form id="form">
-	<input value="1">
-	<input value="2">
-	<input value="4">
-	<input value="6">
-	<input value="8">
-	<input value="10">
-</form>
 <script src= "script.js"></script>
 </body>
 </html>
