--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-<ul id="parent"></ul>
+<ul id="parent">
+	<li><input type="checkbox" name="option2" value="a2">dwadadwadwadwadwadadadwadwa</li>
+</ul>
 </br>
 <input type="text" id="input">
 </br>
@@ -19,14 +21,12 @@
 </br>
 </br>
 <table id="user">
-   
+ 
 </table>
 </br>
-<input type="text" class="num">
-<input type="text" class="num">
-<input type="text" class="num"">
-<input type="button" id="suma" value="Сума">
-<p id="rezult"></p>
+<input type="text" id="num">
+
+<p id="result"></p>
 
 <script src= "script.js"></script>
 </body>
