--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <ul id="parent">
-	<li><input type="checkbox" name="option2" value="a2">dwadadwadwadwadwadadadwadwa</li>
+	
 </ul>
 </br>
 <input type="text" id="input">
@@ -23,11 +23,19 @@
 <table id="user">
  
 </table>
+
+<form action="handler.php">
+   <p><b>Lorem ipsum dolor sit amet...</b></p>
+   <p><input type="checkbox" id="check1"><label for="check1">Lorem</label><Br>
+   <input type="checkbox" id="check2"><label>Ipsum</label><Br>
+   <input type="checkbox" id="check3"><label for="check3">Dolor</label><Br>
+   <input type="checkbox" id="check4"><label for="check4">Sit amet</label></p>
+  </form> 
 </br>
 <input type="text" id="num">
 
 <p id="result"></p>
-
+<img src="images/ready.png">
 <script src= "script.js"></script>
 </body>
 </html>
