--- a/index.html
+++ b/index.html
@@ -4,24 +4,29 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link href="css/style.css" type="text/css" rel="stylesheet" />
+
 </head>
 <body>
-<ul id="parent">
-	
-</ul>
-</br>
-<input type="text" id="input">
-</br>
-</br>
-</br>
-<input type="button" id="all" value="all">
-<input type="button" id="active" value="active">
-<input type="button" id="complited" value="complited">
-</br>
-</br>
-</br>
 
-<input type="text" id="num">
+	<div class='toDo' id="first">
+		<header class='header'>
+			<h1 class='todos'>todos</h1>
+			<div class="logoImg" id="logoImg"></div>
+			<input type="text" id="input" name="" class='new-todo' placeholder="What needs to be done" required/>
+		</header>
+	    <ul id="parent">
+	
+		</ul>
+</div>	
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 
 
 <script src= "script.js"></script>
