--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link href="css/style.css" type="text/css" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <link href="css/style.css" type="text/css" rel="stylesheet" />
 
 </head>
+
 <body>
 
-	<div class='toDo' id="first">
-		<header class='header'>
-			<h1 class='todos'>todos</h1>
-			<div class="logoImg" id="logoImg"></div>
-			<input type="text" id="input" name="" class='new-todo' placeholder="What needs to be done" required/>
-		</header>
-	    <ul id="parent">
-	
-		</ul>
-</div>	
+  <div class='toDo' id="container">
+    <header class='header'>
+      <h1 class='todos'>todos</h1>
+      <div class="logoImg" id="logoImg"></div>
+      <input type="text" id="input" name="" class='new-todo' placeholder="What needs to be done" required />
+    </header>
+    <ul id="parent">
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+    </ul>
+  </div>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
 
 
-<script src= "script.js"></script>
+  <script src="script.js"></script>
 </body>
+
 </html>
